# FSM

./: .gitignore  CMakeLists.txt  README.md  codecov22.cmd
.github/workflows/: ci.yml
fsm/: fsm.h
tests/: CMakeLists.txt  test_fsm_basic.cpp  test_fsm_performance.cpp  test_fsm_single_transition.cpp
